[B]0.0.7[/B]
- Require Kodi 17+
- fix for anime list inside a genre (#10)
- Various bug fixes as 9anime changes
- use URLResolver for openload sources

[B]0.0.2[/B]
- fix for domain issues
- update OpenLoad algorithem

[B]0.0.1[/B]
- Add support for the new Mp4Upload source.
- Minor bug fixes

[B]0.0.1-rc.0[/B]
- Initial release