@@ -1,3 +1,5 @@
+[B]0.0.8[/B]
+- add support for MyCloud provider
 [B]0.0.7[/B]
 - Require Kodi 17+
 - fix for anime list inside a genre (#10)
